--- a/eddit/posts/templates/posts/index.html
+++ b/eddit/posts/templates/posts/index.html
@@ -1,9 +1,15 @@
+<h1>Welcome to Eddit!</h1>
+<hr>
+<h2>Latest posts:</h2>
+<br>
 {% if latest_posts %}
     <ol>
     {% for post in latest_posts %}
-        <li><a href="/{{ post.id }}/">{{ post.title }}</a></li>
+        <li><a href="{% url 'focus' post.id %}">{{ post.title }}</a></li>
     {% endfor %}
     </ol>
 {% else %}
     <p>No posts are available.</p>
 {% endif %}
+<br>
+<a href="{% url 'post' %}">Create post<a></a>
