--- a/eddit/posts/templates/posts/post_focus.html
+++ b/eddit/posts/templates/posts/post_focus.html
@@ -1,5 +1,4 @@
-<h3>{{ post.title }}</h3>
-<br>
+<h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
 <hr>
 {% if latest_comments %}
@@ -11,3 +10,6 @@
 {% else %}
     <p>This post has no comments.</p>
 {% endif %}
+<br>
+<a href="{% url 'comment' post.id%}">Create comment</a>
+<a href="{% url 'index' %}">Return to homepage</a>
